--- a/app/src/main/res/menu/pp_navigtation.xml
+++ b/app/src/main/res/menu/pp_navigtation.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view"
+
     >
+
 
 
     <group android:checkableBehavior="single">
@@ -11,7 +13,10 @@
         <item
             android:id="@+id/events"
             android:icon="@drawable/eventsicon"
-            android:title="EVENTS" />
+            android:title="EVENTS"
+             />
+
+        />
         <item
             android:id="@+id/exhibits"
             android:icon="@drawable/exhibitsicon"
