Changed the background color of the navigation view, and also added an action bar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
 
    
 
-    <style name="colorPrimaryLight" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="colorPrimaryLight" parent="Theme.AppCompat.Light">
         <item name="colorPrimaryDark">@android:color/background_light</item>
         <item name="colorPrimary">@android:color/background_light</item>
         <item name="colorAccent">@android:color/background_light</item>
