--- a/app/src/main/res/layout/activity_pp_navigtation.xml
+++ b/app/src/main/res/layout/activity_pp_navigtation.xml
@@ -1,7 +1,7 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,20 +13,20 @@
     <include
         layout="@layout/pinkpalace"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <android.support.design.widget.NavigationView
             android:id="@+id/navigation_drawer"
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@android:color/darker_gray"
+            android:background="@android:color/white"
             app:headerLayout="@layout/navheader"
             app:menu="@menu/pp_navigtation"
 
