Added imagebutton actions once they are presssed to either go to the events, or the exhibits

--- a/app/src/main/res/layout/pinkpalace.xml
+++ b/app/src/main/res/layout/pinkpalace.xml
@@ -22,7 +22,8 @@
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ppmenu"
             tools:layout_editor_absoluteX="91dp"
-            tools:layout_editor_absoluteY="79dp" />
+            tools:layout_editor_absoluteY="79dp"
+            />
 
 
         <Button
