--- a/app/src/main/res/layout/activity_pp_navigtation.xml
+++ b/app/src/main/res/layout/activity_pp_navigtation.xml
@@ -13,7 +13,8 @@
     <include
         layout="@layout/pinkpalace"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:alpha="0.5"/>
 
 
     <FrameLayout
