--- a/app/src/main/res/layout/activity_socialmedia.xml
+++ b/app/src/main/res/layout/activity_socialmedia.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/facebookButton"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginBottom="128dp"
@@ -17,14 +17,14 @@
         android:layout_marginTop="118dp"
         android:background="#00000000"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+        app:layout_constraintBottom_toBottomOf="@+id/twitterButton"
+        app:layout_constraintEnd_toStartOf="@+id/youtubeButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton2"
+        app:layout_constraintTop_toTopOf="@+id/instagramButton"
         app:srcCompat="@drawable/facebook" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/instagramButton"
         android:layout_width="95dp"
         android:layout_height="96dp"
         android:layout_marginBottom="11dp"
@@ -33,40 +33,40 @@
         android:background="#00000000"
         android:cropToPadding="false"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
+        app:layout_constraintBottom_toTopOf="@+id/youtubeButton"
+        app:layout_constraintEnd_toStartOf="@+id/linkedinButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/ppLogo"
         app:srcCompat="@drawable/instagram" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/linkedinButton"
         android:layout_width="101dp"
         android:layout_height="102dp"
         android:layout_marginEnd="54dp"
         android:background="#00000000"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
+        app:layout_constraintBottom_toTopOf="@+id/youtubeButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
-        app:layout_constraintTop_toTopOf="@+id/imageButton2"
+        app:layout_constraintStart_toEndOf="@+id/instagramButton"
+        app:layout_constraintTop_toTopOf="@+id/instagramButton"
         app:srcCompat="@drawable/linkedin" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/youtubeButton"
         android:layout_width="161dp"
         android:layout_height="162dp"
         android:layout_marginEnd="16dp"
         android:background="#00000000"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
+        app:layout_constraintBottom_toTopOf="@+id/twitterButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
+        app:layout_constraintStart_toEndOf="@+id/facebookButton"
+        app:layout_constraintTop_toBottomOf="@+id/instagramButton"
         app:srcCompat="@drawable/youtube" />
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/twitterButton"
         android:layout_width="150dp"
         android:layout_height="135dp"
         android:layout_marginBottom="16dp"
@@ -75,11 +75,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
+        app:layout_constraintTop_toBottomOf="@+id/youtubeButton"
         app:srcCompat="@drawable/twitter" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ppLogo"
         android:layout_width="409dp"
         android:layout_height="108dp"
         android:layout_marginBottom="83dp"
@@ -87,7 +87,7 @@
         android:layout_marginStart="1dp"
         android:background="#00000000"
         android:paddingTop="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
+        app:layout_constraintBottom_toTopOf="@+id/instagramButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
