--- a/app/src/main/res/layout/activity_socialmedia.xml
+++ b/app/src/main/res/layout/activity_socialmedia.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.nick.pinkpalace.socialmedia"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+    android:background="#ffffff">
 
     <ImageButton
         android:id="@+id/facebookButton"
