--- a/app/src/main/res/layout/events.xml
+++ b/app/src/main/res/layout/events.xml
@@ -11,6 +11,16 @@
         android:background="#13C7CE">
 
 
+        <ImageButton
+            android:id="@+id/earlylearnerImageButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="0dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/earlylearner"
+
+            />
+
         <TextView
             android:id="@+id/earlylearnerTextView"
             android:layout_width="wrap_content"
@@ -21,18 +31,12 @@
             android:text="EARLY \nSCIENCE \nLEARNER"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic"
             />
-
-        <ImageButton
-            android:id="@+id/earlylearnerImageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="205dp"
-            android:src="@drawable/earlylearner"
-
-            />
-
 
 
     </FrameLayout>
@@ -45,7 +49,8 @@
             android:id="@+id/santalandImageButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="205dp"
+            android:scaleType="fitXY"
+            android:padding="0dp"
             android:src="@drawable/santaland" />
 
         <TextView
@@ -55,9 +60,13 @@
             android:layout_gravity="left|center_vertical"
             android:fontFamily="sans-serif"
             android:padding="5dp"
-            android:text="SANTA LANDS \nAT \nTHE \nPINK \nPALACE"
+            android:text="SANTA LANDS \nAT \nTHE \nPINK PALACE"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic"/>
 
     </FrameLayout>
@@ -70,7 +79,8 @@
             android:id="@+id/harrypotterImageButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="205dp"
+            android:scaleType="fitXY"
+            android:padding="0dp"
             android:src="@drawable/harrypotter" />
 
         <TextView
@@ -83,6 +93,10 @@
             android:text="HARRY POTTER \nSCAVENGER \nHUNT"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic"/>
 
     </FrameLayout>\
@@ -96,7 +110,8 @@
             android:id="@+id/scienceofbeerImageButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="205dp"
+            android:scaleType="fitXY"
+            android:padding="0dp"
             android:src="@drawable/sciencebeer" />
 
         <TextView
@@ -109,6 +124,10 @@
             android:text="SCIENCE \nOF \nBEER"
             android:textColor="@android:color/background_light"
             android:textSize="26sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic"/>
 
     </FrameLayout>
