--- a/app/src/main/res/layout/exhibits.xml
+++ b/app/src/main/res/layout/exhibits.xml
@@ -11,6 +11,13 @@
         android:background="#B8977E">
 
 
+        <ImageButton
+            android:id="@+id/enchantedforestImageButton"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+
+            android:src="@drawable/enchantedforest" />
+
         <TextView
             android:id="@+id/enchantedforestTextView"
             android:layout_width="wrap_content"
@@ -21,17 +28,11 @@
             android:text="ENCHANTED \nFOREST"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic" />
-
-        <ImageButton
-            android:id="@+id/enchantedforestImageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="205dp"
-            android:src="@drawable/enchantedforest"
-
-            />
-
 
 
     </FrameLayout>
@@ -42,9 +43,10 @@
 
         <ImageButton
             android:id="@+id/futureImageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="205dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:padding="0dp"
             android:src="@drawable/palanceoffuture" />
 
         <TextView
@@ -57,6 +59,10 @@
             android:text="PINK PALACE \nOF THE \nFUTURE"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic"/>
 
     </FrameLayout>
@@ -67,9 +73,10 @@
 
         <ImageButton
             android:id="@+id/naturalImageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="205dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:padding="0dp"
             android:src="@drawable/naturalmidsouth" />
 
         <TextView
@@ -82,6 +89,10 @@
             android:text="NATURAL \nHISTORY \nOF THE \nMIDSOUTH"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic"/>
 
     </FrameLayout>\
@@ -93,9 +104,10 @@
 
         <ImageButton
             android:id="@+id/culturalImageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="205dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:padding="0dp"
             android:src="@drawable/culturalmidsouth" />
 
         <TextView
@@ -108,6 +120,10 @@
             android:text="CULTURAL \nHISTORY \nOF THE \nMIDSOUTH"
             android:textColor="@android:color/background_light"
             android:textSize="26sp"
+            android:shadowColor="#000000"
+            android:shadowDx= "1"
+            android:shadowDy= "1"
+            android:shadowRadius = "5"
             android:textStyle="bold|italic"/>
 
     </FrameLayout>
