Fixed the gray background on the textviews.

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -22,14 +22,14 @@
             android:text="PINK \nPALACE"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
-            android:textStyle="bold|italic" />
+            android:textStyle="bold|italic"
+            android:background="@null"/>
 
         <ImageButton
             android:id="@+id/pinkpImageButton"
             android:layout_width="205dp"
             android:layout_height="match_parent"
             android:layout_gravity="right"
-            android:background="@null"
             android:cropToPadding="false"
             android:defaultFocusHighlightEnabled="false"
             android:scaleType="centerCrop"
@@ -47,7 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="205dp"
-            android:src="@drawable/cti" />
+            android:src="@drawable/cti"
+            android:background="@null"/>
 
         <TextView
             android:id="@+id/ctiTextView"
@@ -59,6 +60,7 @@
             android:text="CTI GIANT \n3D THEATRE "
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
+            android:background="@null"
             android:textStyle="bold|italic"/>
 
     </FrameLayout>
@@ -72,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="205dp"
+            android:background="@null"
             android:src="@drawable/autozone" />
 
         <TextView
@@ -98,6 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="205dp"
+            android:background="@null"
             android:src="@drawable/nature" />
 
         <TextView
@@ -123,6 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="205dp"
+            android:background="@null"
             android:src="@drawable/coon" />
 
         <TextView
@@ -148,6 +153,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="205dp"
+            android:background="@null"
             android:src="@drawable/historic" />
 
         <TextView
