Added functional of fragments for navigation view. Currently unable to add function to the buttons after using fragments.

--- a/app/src/main/res/layout/activity_pp_navigtation.xml
+++ b/app/src/main/res/layout/activity_pp_navigtation.xml
@@ -1,40 +1,25 @@
-<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nick.pinkpalace.ppNavigtation">
-
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
     <include
-        layout="@layout/pinkpalace"
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:alpha="0.5"/>
-
-
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.design.widget.NavigationView
-            android:id="@+id/navigation_drawer"
-            android:layout_width="250dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@android:color/white"
-            app:headerLayout="@layout/navheader"
-            app:menu="@menu/pp_navigtation"
-
-            tools:layout="@layout/drawer_pp_navigtation" />
-    </FrameLayout>
-
-    <!-- The drawer is given a fixed width in dp and extends the full height of
-         the container. -->
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
