--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showIn="navigation_view"
-
-    >
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <group android:checkableBehavior="single">
@@ -15,19 +9,6 @@
             android:icon="@drawable/eventsicon"
             android:title="EVENTS"/>
 
-            <Button
-                android:id="@+id/exploreButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="bottom|center_horizontal"
-                android:layout_marginBottom="68dp"
-                android:gravity="center"
-                android:text="EXPLORE"
-
-                android:textColor="#000000"
-             />
 
         <item
             android:id="@+id/exhibitsItem"
