Added functional of fragments for navigation view. Currently unable to add function to the buttons after using fragments.

--- a/app/src/main/res/layout/aboutus.xml
+++ b/app/src/main/res/layout/aboutus.xml
@@ -15,7 +15,7 @@
         android:layout_margin="@dimen/text_margin"
         android:lineSpacingExtra="24sp"
         android:paddingTop="40dp"
-        android:text="@string/aboutus"
+        android:text="@string/aboutUs"
         android:textSize="24sp" />
 
 </android.support.v4.widget.NestedScrollView>
