Cleaned up a unneeded code in the program including menus, layouts, strings, and java classes

--- a/app/src/main/res/layout/content_cultural.xml
+++ b/app/src/main/res/layout/content_cultural.xml
@@ -17,6 +17,6 @@
         android:lineSpacingExtra="24sp"
         android:paddingTop="40dp"
         android:textSize="24sp"
-        android:text="@string/cultural" />
+        android:text="@string/culturalDescription" />
 
 </android.support.v4.widget.NestedScrollView>
