--- a/app/src/main/res/layout/content_general.xml
+++ b/app/src/main/res/layout/content_general.xml
@@ -14,7 +14,7 @@
         android:layout_margin="@dimen/text_margin"
         android:lineSpacingExtra="24sp"
         android:paddingTop="40dp"
-        android:text="@string/general"
+        android:text="@string/generalDescrption"
         android:textSize="24sp" />
 
 </android.support.v4.widget.NestedScrollView>
