--- a/app/src/main/res/layout/content_natural.xml
+++ b/app/src/main/res/layout/content_natural.xml
@@ -15,6 +15,6 @@
         android:lineSpacingExtra="24sp"
         android:paddingTop="40dp"
         android:textSize="24sp"
-        android:text="@string/natural" />
+        android:text="@string/naturalDescription" />
 
 </android.support.v4.widget.NestedScrollView>
