Fixed issue where navigation view had a black background. Has been changed to white

--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -13,8 +13,7 @@
         android:layout_height="@dimen/app_bar_height"
         android:background="@drawable/pinkpalacelogo"
         android:fitsSystemWindows="true"
-        android:theme="@style/colorPrimaryLight">
-
+        android:theme="@style/AppTheme.NoActionBar">
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
