--- a/app/src/main/res/layout/pinkpalace.xml
+++ b/app/src/main/res/layout/pinkpalace.xml
@@ -34,9 +34,10 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="68dp"
+            android:background="@android:color/background_light"
             android:gravity="center"
-            android:text="EXPLORE"
 
+            android:text="EXPLORE"
             android:textColor="#000000" />
 
         <ImageView
