--- a/app/src/main/res/layout/pinkpalace.xml
+++ b/app/src/main/res/layout/pinkpalace.xml
@@ -14,16 +14,10 @@
         android:layout_centerHorizontal="true" >
 
 
-        <ImageView
-            android:id="@+id/ppBGImageView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/backgroundofpinkpalace"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ppmenu"
-            tools:layout_editor_absoluteX="91dp"
-            tools:layout_editor_absoluteY="79dp"
-            />
+        <VideoView
+            android:id="@+id/videoview"
+            android:layout_width="1200dp"
+            android:layout_height="match_parent" />
 
 
         <Button
