--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,19 +16,20 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="ppToolBar" parent="ThemeOverlay.AppCompat.Light">
-    <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="drawerArrowStyle">@style/DrawerIcon</item>
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
 
-    <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
-        <item name="spinBars">true</item>
-        <item name="color">@android:color/black</item>
+    <style name ="DrawerIcon" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name = "color">#000</item>
     </style>
+
+
 
 
 </resources>
