--- a/app/src/main/res/layout/events.xml
+++ b/app/src/main/res/layout/events.xml
@@ -8,7 +8,7 @@
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#13C7CE">
+        >
 
 
         <ImageButton
@@ -28,7 +28,7 @@
             android:layout_gravity="left|center_vertical"
             android:fontFamily="sans-serif"
             android:padding="5dp"
-            android:text="EARLY \nSCIENCE \nLEARNER"
+            android:text="@string/earlyLearnerText"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
             android:shadowColor="#000000"
@@ -43,7 +43,7 @@
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#13CE66">
+        >
 
         <ImageButton
             android:id="@+id/santalandImageButton"
@@ -73,7 +73,7 @@
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#925D35">
+        >
 
         <ImageButton
             android:id="@+id/harrypotterImageButton"
@@ -104,7 +104,7 @@
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#FFD185">
+        >
 
         <ImageButton
             android:id="@+id/scienceofbeerImageButton"
