--- a/app/src/main/res/layout/activity_socialmedia.xml
+++ b/app/src/main/res/layout/activity_socialmedia.xml
@@ -20,8 +20,10 @@
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/twitterButton"
         app:layout_constraintEnd_toStartOf="@+id/youtubeButton"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/instagramButton"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/facebook" />
 
     <ImageButton
@@ -57,12 +59,11 @@
         android:id="@+id/youtubeButton"
         android:layout_width="161dp"
         android:layout_height="162dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="28dp"
         android:background="#00000000"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/twitterButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/facebookButton"
         app:layout_constraintTop_toBottomOf="@+id/instagramButton"
         app:srcCompat="@drawable/youtube" />
 
