--- a/app/src/main/res/layout/pinkpalace.xml
+++ b/app/src/main/res/layout/pinkpalace.xml
@@ -11,7 +11,16 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="false">
+        <TableLayout android:layout_height="fill_parent"
+            android:layout_width="fill_parent">
 
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:srcCompat="@drawable/pinkpalacelogo" />
+            
         <ImageView
             android:id="@+id/pinkpalacelogoImageView"
             android:layout_width="match_parent"
@@ -21,6 +30,8 @@
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/palace_landing" />
 
+
+        </TableLayout>
         <Button
             android:id="@+id/exploreButton"
             android:layout_width="238dp"
@@ -34,13 +45,6 @@
             android:text="EXPLORE THE PALACE"
             android:textColor="#d63285"
             android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-
-            app:srcCompat="@drawable/pinkpalacelogo" />
 
 
     </FrameLayout>
